@@ -1,5 +1,7 @@
 2006-05-10  Sven Panne  <sven.panne@aedion.de>
 
+	* tests/altest/altest.c: Consistently use #if for enabling features.
+
 	* tests/altest/altest.c(I_SetSourceOffsetTest): Don't rely on undefined
 	C semantics.
 	
